kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: python-app-deployment
  namespace: mdx
  labels:
    app: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      securityContext:
          runAsUser: 1000
          runAsGroup: 3000
          fsGroup: 2000
       
      containers:
      - name: python-app
        image: faraaz/tarabut:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5000

        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"

        livenessProbe:
          exec:
            command:
              - cat
              - /app/requirements.txt
          initialDelaySeconds: 3
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /name
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5

      serviceAccountName: list-pods-sa
