kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: mdx
spec:
  type: NodePort
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
