kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: mdx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /upload
spec:
  rules:
    - host: mdx.com
      http:
        paths:
          - pathType: Exact
            path: /upload
            backend:
              service:
                name: app-service
                port:
                  number: 8080
